--- a/src/components/organisms/createRoom/styles/create-room.css
+++ b/src/components/organisms/createRoom/styles/create-room.css
@@ -5,24 +5,30 @@
     justify-content: center;
     height: 100%;
     width: 100%;
-    background-color: var(--color-background);
 }
-
+.create-room__title {
+    font-family: "Subway Berlin", sans-serif;
+    font-size: var(--font-size-xl);
+    line-height: var(--line-height-snug);
+    color: white;
+    text-align: center;
+    margin: 0;
+}
+.create-room__title h1 {
+    margin: 0;
+    padding: 0;
+}
 .create-room__input {
-    margin-top: 30px;
+    margin-top: var(--spacing-xxl);
 }
 
-.create-room__button {
-    position: absolute;
-    border: 0;
-    right: 120px;
-    bottom: 120px;
-    margin-top: 4rem;
-}
 
 .create-room__container {
     z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    height: 100vh;
 }
