--- a/src/components/templates/homePage/styles/home-page.css
+++ b/src/components/templates/homePage/styles/home-page.css
@@ -56,6 +56,7 @@
   position: relative;
   padding: 0;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 12px;
   cursor: pointer;
   background: transparent;
   color:white;
