--- a/src/components/organisms/mainTable/styles/main-table.css
+++ b/src/components/organisms/mainTable/styles/main-table.css
@@ -31,19 +31,26 @@
     border: solid 3px black;
   }
 
-  .main-table__background {
-    position: absolute;
-    top: 43%;
-    right: 30%;
-  }
+    .main-table__background {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
 
   .main-table__finish-round {
     position: absolute;
-    left: 46%;
+    left: 50%;
+    text-align: center;
     bottom: 30px;
     transform: translateX(-50%);
     width: 100px;
     height: auto;
+    background: transparent;
+    border: none;
+    padding: 8px 12px;
   }
 
   .main-table__finish-round:hover {
@@ -65,9 +72,7 @@
       margin-top: 12px;
     }
 
-    .main-table__background {
-      font-size: 18px;
-    }
+
 
     .main-table__finish-round {
       right: 253px;
@@ -88,12 +93,6 @@
       margin-top: 16px;
     }
 
-    .main-table__background {
-      font-size: 20px;
-      top: 40%;
-      right: 30%;
-    }
-
     .main-table__finish-round {
       right: 170px;
       width: 90px;
@@ -107,11 +106,6 @@
       padding-inline: 8px;
       padding-bottom: 20px;
       width: 90%;
-    }
-
-    .main-table__background {
-      right: 20%;
-      font-size: 16px;
     }
 
     .main-table__finish-round {
@@ -131,10 +125,6 @@
       min-height: 260px;
     }
 
-    .main-table__background {
-      right: 20%;
-      font-size: 16px;
-    }
 
     .main-table__finish-round {
       right: 55px;
@@ -142,4 +132,10 @@
       width: 60px;
     }
   }
+}
+
+.main-table__place-cards {
+  font-family: 'Subway Berlin', sans-serif;
+  font-size: clamp(12px, 1.5rem, 28px);
+  color: white;
 }
