--- a/src/components/molecules/tacticCardBack/styles/tactic-card-back.css
+++ b/src/components/molecules/tacticCardBack/styles/tactic-card-back.css
@@ -1,6 +1,4 @@
 .tactic-card-back {
-  width: 100%;
-  height: 100%;
   background-color:antiquewhite;
   background-size: cover;
   background-position: center;
@@ -9,7 +7,8 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -22,12 +21,12 @@
   padding-block: 0;
   padding-inline: 6px;
   width: 100%;
-  max-width: 100%;
   height: 100%;
+  max-width: 100%;
   max-height: 100%;
   gap: 10px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .tactic-card-back-description,
