--- a/src/components/molecules/tacticCards/styles/tactic-cards.css
+++ b/src/components/molecules/tacticCards/styles/tactic-cards.css
@@ -41,7 +41,7 @@
 
 /* Responsive */
 /* Tablet landscape */
-@media (max-width: 1024px) and (orientation: landscape) {
+/* @media (max-width: 1024px) and (orientation: landscape) {
   .tactic-cards-wrapper {
     max-width: 70vw;
     max-height: 45vh;
@@ -52,10 +52,10 @@
   .tactic-card:nth-child(n+6) {
     display: none;
   }
-}
+} */
 
 /* Mobile landscape */
-@media (max-width: 640px) and (orientation: landscape) {
+/* @media (max-width: 640px) and (orientation: landscape) {
   .tactic-cards-wrapper {
     max-width: 60vw;
     max-height: 35vh;
@@ -66,4 +66,4 @@
   .tactic-card:nth-child(n+6) {
     display: none;
   }
-}
+} */
