--- a/src/components/organisms/mainTable/styles/main-table.css
+++ b/src/components/organisms/mainTable/styles/main-table.css
@@ -18,8 +18,7 @@
 
   .main-table__tactics {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     padding-inline: 16px;
     gap: 4px;
     border-radius: 24px;
@@ -29,24 +28,25 @@
     position: relative;
     min-height: 400px;
     border: solid 3px black;
+    place-items: center;
+    place-content: center;
   }
 
-    .main-table__background {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
+  .main-table__background {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   .main-table__finish-round {
     position: absolute;
     left: 50%;
     text-align: center;
-    bottom: 30px;
+    bottom: 10px;
     transform: translateX(-50%);
-    width: 100px;
     height: auto;
     background: transparent;
     border: none;
@@ -62,18 +62,6 @@
     grid-template-columns: 1fr;
     padding-inline: 12px;
 
-    .main-table__tactics {
-      grid-template-columns: repeat(2, 1fr);
-      padding-inline: 12px;
-      padding-bottom: 30px;
-      min-height: 320px;
-      width: 60%;
-      margin: 0 auto;
-      margin-top: 12px;
-    }
-
-
-
     .main-table__finish-round {
       right: 253px;
       width: 90px;
@@ -82,16 +70,6 @@
   @media (max-width: 1024px) {
     grid-template-columns: 1fr;
     padding-inline: 14px;
-
-    .main-table__tactics {
-      grid-template-columns: repeat(2, 1fr);
-      padding-inline: 14px;
-      padding-bottom: 35px;
-      min-height: 310px;
-      width: 70%;
-      margin: 0 auto;
-      margin-top: 16px;
-    }
 
     .main-table__finish-round {
       right: 170px;
@@ -125,7 +103,6 @@
       min-height: 260px;
     }
 
-
     .main-table__finish-round {
       right: 55px;
       bottom: 20px;
@@ -135,7 +112,13 @@
 }
 
 .main-table__place-cards {
-  font-family: 'Subway Berlin', sans-serif;
+  font-family: "Subway Berlin", sans-serif;
   font-size: clamp(12px, 1.5rem, 28px);
   color: white;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
