--- a/src/components/molecules/newsCard/styles/news-card.css
+++ b/src/components/molecules/newsCard/styles/news-card.css
@@ -1,256 +1,263 @@
 .news-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 580px;
-    position: relative;
-    border: solid 3px black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 580px;
+  position: relative;
+  border: solid 3px black;
+  border-radius: 10px;
+  overflow: hidden;
+
+  .news-card__content {
+    --color-primary: black;
+    padding: 12px;
+    background-color: white;
+    background-image: url("/images/news/news-bg.webp");
+    color: var(--color-primary);
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    padding-left: 0;
+    padding-block: 0;
     overflow: hidden;
+    max-width: 700px;
+    max-height: 400px;
+  }
 
-    .news-card__content {
-        --color-primary: black;
-        padding: 12px;
-        background-color: white;
-        background-image: url("/images/news/news-bg.webp");
-        color: var(--color-primary);
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        display: flex;
-        padding-left: 0;
-        padding-block: 0;
-        overflow: hidden;
-        max-width: 700px;
-        max-height: 400px;
-    }
+  .news-card__images {
+    max-height: 400px;
+    width: auto;
+  }
 
-    .news-card__images {
-        max-height: 400px;
-        width: auto;
-    }
+  .news-card__title {
+    font-family: "DIN", sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    margin-block: 4px;
+  }
 
-    .news-card__title {
-        font-family: "DIN", sans-serif;
-        font-size: 22px;
-        font-weight: 400;
-        margin-block: 4px;
-    }
+  .news-card__description {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-family: "p22", sans-serif;
+    text-wrap: balance;
+  }
 
-    .news-card__description {
-        font-size: 16px;
-        font-weight: 400;
-        margin-bottom: 0;
-        padding-bottom: 0;
-        font-family: "p22", sans-serif;
-    }
-
-    .news-card__text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-inline: 24px;
-        width: 400px;
-    }
+  .news-card__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-inline: 24px;
+    width: 400px;
+    text-wrap: balance;
+  }
 }
 
 .news-card__modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  min-width: 480px;
+
+  .news-card__content {
+    --color-primary: black;
+    padding: 12px;
+    background-color: white;
+    background-image: url("/public/images/news/news-bg.png");
+    color: var(--color-primary);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
+    padding-left: 0;
+    padding-block: 0;
+    overflow: hidden;
+    width: 600px;
+    height: 350px;
+  }
+
+  .news-card__images {
+    max-height: 350px;
+    width: auto;
+  }
+
+  .news-card__title {
+    font-family: "podium-soft", sans-serif;
+    font-size: 22px;
+    font-weight: 100;
+    margin-bottom: 0.5rem;
+  }
+
+  .news-card__description {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+    font-family: "p22", sans-serif;
+  }
+
+  .news-card__text {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 25px;
-    min-width: 480px;
-
-    .news-card__content {
-        --color-primary: black;
-        padding: 12px;
-        background-color: white;
-        background-image: url("/public/images/news/news-bg.png");
-        color: var(--color-primary);
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        display: flex;
-        padding-left: 0;
-        padding-block: 0;
-        overflow: hidden;
-        width: 600px;
-        height: 350px;
-    }
-
-    .news-card__images {
-        max-height: 350px;
-        width: auto;
-    }
-
-    .news-card__title {
-        font-family: "podium-soft", sans-serif;
-        font-size: 22px;
-        font-weight: 100;
-        margin-bottom: 0.5rem;
-    }
-
-    .news-card__description {
-        font-size: 14px;
-        font-weight: 400;
-        margin-bottom: 0.5rem;
-        font-family: "p22", sans-serif;
-    }
-
-    .news-card__text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        font-size: 14px;
-        font-weight: 400;
-        padding: 24px;
-    }
+    align-items: flex-start;
+    font-size: 14px;
+    font-weight: 400;
+    padding: 24px;
+  }
 }
 
 .news-card__tactic-count {
-    position: absolute;
-    bottom: 25px;
-    right: 30px;
+  position: absolute;
+  bottom: 25px;
+  right: 30px;
 }
 
 @media (max-width: 1024px) {
-    .news-card {
-        min-width: 500px;
+  .news-card {
+    min-width: 500px;
 
-        .news-card__content {}
-
-        .news-card__title {
-            font-size: 20px;
-        }
-
-        .news-card__description {
-            font-size: 14px;
-        }
-
-        .news-card__text {
-            width: 350px;
-            padding-inline: 20px;
-        }
+    .news-card__content {
     }
 
-    .news-card__modal {
-        min-width: 400px;
-
-        .news-card__content {}
-
-        .news-card__title {
-            font-size: 20px;
-        }
-
-        .news-card__description {
-            font-size: 12px;
-        }
-
-        .news-card__text {
-            font-size: 12px;
-        }
+    .news-card__title {
+      font-size: 20px;
     }
+
+    .news-card__description {
+      font-size: 14px;
+    }
+
+    .news-card__text {
+      width: 350px;
+      padding-inline: 20px;
+    }
+  }
+
+  .news-card__modal {
+    min-width: 400px;
+
+    .news-card__content {
+    }
+
+    .news-card__title {
+      font-size: 20px;
+    }
+
+    .news-card__description {
+      font-size: 12px;
+    }
+
+    .news-card__text {
+      font-size: 12px;
+    }
+  }
 }
 
 @media (max-width: 768px) {
-    .news-card {
-        min-width: 300px;
-        max-width: 90%;
+  .news-card {
+    min-width: 300px;
+    max-width: 90%;
 
-        .news-card__content {}
-
-        .news-card__title {
-            font-size: 16px;
-        }
-
-        .news-card__images {
-            max-height: 300px;
-            width: auto;
-        }
-
-        .news-card__description {
-            font-size: 12px;
-        }
-
-        .news-card__text {
-            width: 100%;
-            padding-inline: 16px;
-        }
-
-        .news-card__tactic-count {
-            bottom: 10px;
-            right: 20px;
-        }
+    .news-card__content {
     }
 
-    .news-card__modal {
-        min-width: 300px;
-
-        .news-card__content {}
-
-        .news-card__title {
-            font-size: 18px;
-        }
-
-        .news-card__description {
-            font-size: 10px;
-        }
-
-        .news-card__text {
-            font-size: 10px;
-        }
+    .news-card__title {
+      font-size: 16px;
     }
+
+    .news-card__images {
+      max-height: 300px;
+      width: auto;
+    }
+
+    .news-card__description {
+      font-size: 12px;
+    }
+
+    .news-card__text {
+      width: 100%;
+      padding-inline: 16px;
+    }
+
+    .news-card__tactic-count {
+      bottom: 10px;
+      right: 20px;
+    }
+  }
+
+  .news-card__modal {
+    min-width: 300px;
+
+    .news-card__content {
+    }
+
+    .news-card__title {
+      font-size: 18px;
+    }
+
+    .news-card__description {
+      font-size: 10px;
+    }
+
+    .news-card__text {
+      font-size: 10px;
+    }
+  }
 }
 
 @media (max-width: 480px) {
-    .news-card {
-        min-width: initial;
-        max-width: 90%;
+  .news-card {
+    min-width: initial;
+    max-width: 90%;
 
-        .news-card__content {}
-
-        .news-card__title {
-            font-size: 14px;
-        }
-
-        .news-card__images {
-            max-height: 250px;
-            width: auto;
-        }
-
-        .news-card__description {
-            font-size: 10px;
-        }
-
-        .news-card__text {
-            width: 100%;
-            padding-inline: 12px;
-        }
-
-        .news-card__tactic-count {
-            bottom: 5px;
-            right: 10px;
-        }
+    .news-card__content {
     }
 
-    .news-card__modal {
-        min-width: 250px;
-
-        .news-card__content {
-            width: 100%;
-            height: 200px;
-        }
-
-        .news-card__title {
-            font-size: 16px;
-        }
-
-        .news-card__description {
-            font-size: 8px;
-        }
-
-        .news-card__text {
-            font-size: 8px;
-        }
+    .news-card__title {
+      font-size: 14px;
     }
+
+    .news-card__images {
+      max-height: 250px;
+      width: auto;
+    }
+
+    .news-card__description {
+      font-size: 10px;
+    }
+
+    .news-card__text {
+      width: 100%;
+      padding-inline: 12px;
+    }
+
+    .news-card__tactic-count {
+      bottom: 5px;
+      right: 10px;
+    }
+  }
+
+  .news-card__modal {
+    min-width: 250px;
+
+    .news-card__content {
+      width: 100%;
+      height: 200px;
+    }
+
+    .news-card__title {
+      font-size: 16px;
+    }
+
+    .news-card__description {
+      font-size: 8px;
+    }
+
+    .news-card__text {
+      font-size: 8px;
+    }
+  }
 }
