--- a/src/components/molecules/scoreBoard/styles/score-board.css
+++ b/src/components/molecules/scoreBoard/styles/score-board.css
@@ -1,31 +1,10 @@
 .scoreboard {
   width: 100%;
-  height: 100px;
-  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "subway-berlin-ot", sans-serif;
-  padding-inline: 40px;
-  -webkit-text-stroke: black 1px;
-
-  @media (max-width: 1200px) {
-    padding-inline: 30px;
-  }
-
-  @media (max-width: 1028px) {
-    padding-inline: 20px;
-  }
-
-  @media (max-width: 768px) {
-    height: 80px;
-    padding-inline: 15px;
-  }
-
-  @media (max-width: 480px) {
-    height: 80px;
-    padding-inline: 10px;
-  }
+  font-family: "Subway Berlin", sans-serif;
+  white-space: nowrap;
 }
 
 .scoreboard__names {
@@ -69,164 +48,58 @@
 .scoreboard-right__container {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-right: 40px;
-
-  @media (max-width: 1200px) {
-    margin-right: 30px;
-  }
-
-  @media (max-width: 1028px) {
-    margin-right: 20px;
-  }
-
-  @media (max-width: 768px) {
-    margin-right: 10px;
-  }
-
-  @media (max-width: 480px) {
-    width: 130px;
-    margin-top: -60px;
-    margin-left: -25px;
-    margin-bottom: -60px;
-  }
 }
 
 .scoreboard-info__image {
   cursor: pointer;
-  scale: 0.9;
-
+  width: clamp(24px, 4vw, 60px);
+  height: clamp(24px, 4vw, 60px);
+  background: transparent;
+  border: transparent;
+  border-radius: 100%;
   &:hover {
-    transform: scale(1.1);
-  }
-
-  @media (max-width: 1200px) {
-    scale: 0.8;
-    margin-right: 30px;
-  }
-
-  @media (max-width: 1028px) {
-    scale: 0.7;
-    margin-right: 20px;
-  }
-
-  @media (max-width: 768px) {
-    margin-right: 10px;
-  }
-
-  @media (max-width: 480px) {
-    margin-top: -60px;
-    margin-left: -25px;
-    margin-bottom: -60px;
-    margin-right: 5px;
-  }
-}
-
-.scoreboard-timer {
-  width: 200px;
-  margin-right: 0;
-  text-align: right;
-
-  @media (max-width: 1200px) {
-    width: 180px;
-  }
-
-  @media (max-width: 1028px) {
-    width: 160px;
-  }
-
-  @media (max-width: 768px) {
-    width: 130px;
-  }
-
-  @media (max-width: 480px) {
-    width: 130px;
-    margin-top: -60px;
-    margin-left: -25px;
-    margin-bottom: -60px;
-  }
-}
-
-.scoreboard__score-numeric {
-  padding-top: 0;
-  font-size: 1.5em;
-  font-weight: 900;
-  margin-right: 10px;
-
-  @media (max-width: 1200px) {
-    font-size: 1.4em;
-  }
-
-  @media (max-width: 1028px) {
-    font-size: 1.3em;
-  }
-
-  @media (max-width: 768px) {
-    font-size: 1.2em;
-    margin-right: 10px;
-  }
-
-  @media (max-width: 480px) {
-    font-size: 1em;
-    -webkit-text-stroke: 1px black;
-    margin-right: 15px;
-  }
-}
-
-.scoreboard__home-button-small {
-  display: none;
-
-  @media (max-width: 1200px) {
-    font-size: 1.4em;
-  }
-
-  @media (max-width: 1028px) {
-    font-size: 1.3em;
-  }
-
-  @media (max-width: 768px) {
-    font-size: 1.2em;
-    margin-top: -5px;
-    margin-left: -80px;
-    margin-right: 10px;
-    transform: scale(0.7);
-    display: block;
-  }
-
-  @media (max-width: 480px) {
-    font-size: 1em;
-    margin-top: -60px;
-    margin-right: 5px;
-    margin-left: -40px;
-    margin-bottom: -60px;
-    display: block;
+    outline: white 2px;
+    outline-offset: 2px;
   }
 }
 
 .scoreboard__home-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 12px;
+  gap: 12px;
+  background: transparent;
+  border: transparent;
+  border-radius: 12px;
+  cursor: pointer;
+}
+.scoreboard__home-image {
+  width: clamp(24px, 4vw, 60px);
+  height: clamp(24px, 4vw, 60px);
+  flex-shrink: 0;
+}
+.scoreboard__home-button-small {
   display: block;
-  margin-top: 20px;
-  margin-left: -65px;
+  color: white;
+  font-family: "Subway Berlin", sans-serif;
+  font-size: clamp(12px, 2 0.5rem, 60px);
+  margin: 0;
+  line-height: 1.2;
 
-  @media (max-width: 1200px) {
-    font-size: 1.4em;
-    margin-left: -60px;
-  }
-
-  @media (max-width: 1028px) {
-    font-size: 1.3em;
-    margin-left: -50px;
-    transform: scale(0.8);
-  }
-
-  @media (max-width: 768px) {
-    font-size: 1.2em;
-    margin-right: 10px;
+  @media (max-height: 600px) {
     display: none;
   }
+}
 
-  @media (max-width: 480px) {
-    font-size: 1em;
-    margin-right: 5px;
-    display: none;
-  }
+.scoreboard-audio__button {
+  background: transparent;
+  border: transparent;
+  border-radius: 100%;
+  cursor: pointer;
+  width: clamp(24px, 4vw, 60px);
+  height: clamp(24px, 4vw, 60px);
+  margin-left: 20px;
 }
