--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@
 @import "./components/organisms/lobby/styles/lobby.css";
 @import "./components/organisms/nameSelection/styles/name-selection.css";
 @import "./components/organisms/createRoom/styles/create-room.css";
+@import "./components/organisms/modals/infoModal/styles/info-modal.css";
+@import "./components/organisms/modals/responseModal/styles/response-modal.css";
+@import "./components/organisms/modals/resultModal/styles/result-modal.css";
+@import "./components/organisms/modals/roundModal/styles/round-modal.css";
+@import "./components/organisms/modals/scoreModal/styles/score-modal.css";
 @import "./components/templates/createRoomPage/styles/create-room-page.css";
 @import "./components/templates/gamePage/styles/game-page.css";
 @import "./components/templates/homePage/styles/home-page.css";
