--- a/src/components/organisms/modals/scoreModal/styles/score-modal.css
+++ b/src/components/organisms/modals/scoreModal/styles/score-modal.css
@@ -3,18 +3,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: var(--width-full);
+  height: var(--height-full);
+}
+.score-modal__header {
+  font-family: "Subway Berlin", sans-serif;
+  font-size: clamp(52px, 4vw, 96px);
+  -webkit-text-stroke: black 1px;
 }
 .score-modal__title {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 36px;
+  font-size: clamp(24px, 4vw, 52px);
   font-weight: bold;
-  font-family: "subway-berlin-ot", sans-serif;
+  font-family: "Subway Berlin", sans-serif;
   -webkit-text-stroke: black 1px;
-  width: 600px;
+  width: var(--max-height-lg);
   margin-bottom: 0;
 }
 .score-modal__scores {
@@ -22,24 +27,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  gap: 8px;
+  width: var(--width-full);
+  height: var(--height-full);
+  gap: var(--gap-grid-sm);
 }
 .score-modal__players {
-  font-family: "subway-berlin-ot", sans-serif;
-  font-size: 48px;
+  font-family: "Subway Berlin", sans-serif;
+  font-size: clamp(20px, 2vw, 48px);
   -webkit-text-stroke: black 1px;
   display: flex;
   justify-content: space-between;
   background-color: rgba(0, 0, 0, 0.7);
-  width: 600px;
-  padding: 16px;
-  border-radius: 20px;
+  width: var(--max-height-lg);
+  padding: var(--spacing-md);
+  border-radius: var(--radius-md);
 }
 .score-modal__player-left {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 24px;
+  gap: var(--spacing-xl);
 }
