--- a/src/components/molecules/newsCard/styles/news-card.css
+++ b/src/components/molecules/newsCard/styles/news-card.css
@@ -85,7 +85,7 @@
   }
 
   .news-card__title {
-    font-family: "Alfa Slab One", serif;
+    font-family: "Alfa Slab", serif;
     font-size: 22px;
     font-weight: 400;
     margin-bottom: 0.5rem;
